--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
 
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install libboost-test-dev
 script:
   - mkdir build
   - cd build
