Adding Super Awesome solution.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(NQUEENS_SOURCE_FILES
     flat_queens.cpp
     bit_queens.cpp
     thread_queens.cpp
+    super_queens.cpp
 )
 
 add_library(nqueens_core ${NQUEENS_SOURCE_FILES})
